2014-07-31  Dan Bernstein  <mitz@apple.com>

        Reverted r171893, because it broke http/tests/appcache/different-https-origin-resource-main.html,
        which loads HTTPS content without calling the delegate.

        Rubber-stamped by Alexey Proskuryakov.

        * WebKitTestRunner/InjectedBundle/ios/InjectedBundleIOS.mm:
        (WTR::InjectedBundle::platformInitialize):
        * WebKitTestRunner/InjectedBundle/mac/InjectedBundleMac.mm:
        (WTR::InjectedBundle::platformInitialize):

2014-07-31  Brent Fulgham  <bfulgham@apple.com>

        Unreviewed typo correction (and build fix).

        * MiniBrowser/mac/WK2BrowserWindowController.m:
        (-[WK2BrowserWindowController awakeFromNib]): Use correct
        property name (_fullScreenIsEnabled -> _fullScreenEnabled)

2014-07-31  Brent Fulgham  <bfulgham@apple.com>

        MiniBrowser Should Support Fullscreen Videos in WebKit2 Mode
        https://bugs.webkit.org/show_bug.cgi?id=135482

        Reviewed by Simon Fraser.

        * MiniBrowser/mac/WK2BrowserWindowController.m:
        (-[WK2BrowserWindowController awakeFromNib]): Activate the Fullscreen
        feature.

2014-07-31  Alexey Proskuryakov  <ap@apple.com>

        [Mac, iOS] Remove -setAllowsAnyHTTPSCertificate calls
        https://bugs.webkit.org/show_bug.cgi?id=135472

        Reviewed by Dan Bernstein.

        We now handle server trust challenges, and don't need such hacks.

        * WebKitTestRunner/InjectedBundle/ios/InjectedBundleIOS.mm:
        (WTR::InjectedBundle::platformInitialize):
        * WebKitTestRunner/InjectedBundle/mac/InjectedBundleMac.mm:
        (WTR::InjectedBundle::platformInitialize):

2014-07-31  Alexey Proskuryakov  <ap@apple.com>

        media/track/add-and-remove-track.html and media/media-fragments/TC0001.html are flaky
        on Mac WK2 EWS, asserting under TestRunner::removeAllWebNotificationPermissions
        https://bugs.webkit.org/show_bug.cgi?id=135418

        Reviewed by Anders Carlsson.
