@@ -2,6 +2,7 @@
 
 use strict;
 use File::Spec;
+use POSIX;
 
 # Copyright (C) 2007, 2009, 2014 Apple Inc.  All rights reserved.
 #
@@ -90,17 +91,17 @@ my $TARGET_PATH = File::Spec->canonpath($target);
 print "Adjusting RC_PROJECTSOURCEVERSION and RC_ProjectSourceVersion to be safe for VersionStamper.\n";
 
 my $SAFE_PROJECT_VERSION = "$components{'__VERSION_MAJOR__'}.$components{'__VERSION_MINOR__'}.$components{'__VERSION_TINY__'}";
+my $SAFE_BUILD_VERSION = $ENV{RC_PROJECTBUILDVERSION} || $components{'__VERSION_BUILD__'};
 
-print "Using RC_PROJECTSOURCEVERSION=$SAFE_PROJECT_VERSION and RC_PROJECTBUILDVERSION=$components{'__VERSION_BUILD__'}\n";
+print "Using RC_PROJECTSOURCEVERSION=$SAFE_PROJECT_VERSION and RC_PROJECTBUILDVERSION=$SAFE_BUILD_VERSION\n";
 
 # Note: These environment settings only affect this script and its child processes:
 $ENV{RC_PROJECTSOURCEVERSION} = $SAFE_PROJECT_VERSION;
 $ENV{RC_ProjectSourceVersion} = $SAFE_PROJECT_VERSION;
-$ENV{RC_PROJECTBUILDVERSION} = $components{'__VERSION_BUILD__'};
 
 my $rc = system($VERSION_STAMPER, '--verbose', $TARGET_PATH, '--fileMajor', $components{'__VERSION_MAJOR__'},
     '--fileMinor', $components{'__VERSION_MINOR__'}, '--fileRevision', $components{'__VERSION_TINY__'},
-    '--fileBuild', $components{'__VERSION_BUILD__'}, '--productMajor', $components{'__VERSION_MAJOR__'},
+    '--fileBuild', $SAFE_BUILD_VERSION, '--productMajor', $components{'__VERSION_MAJOR__'},
     '--productMinor', $components{'__VERSION_MINOR__'}, '--productRevision', $components{'__VERSION_TINY__'},
     '--productBuild', $components{'__VERSION_BUILD__'}); 
 
