@@ -1,5 +1,17 @@
 2014-07-31  Brent Fulgham  <bfulgham@apple.com>
 
+        [Win] Use RC_PROJECTBUILDVERSION as build portion of version
+        https://bugs.webkit.org/show_bug.cgi?id=135478
+
+        Reviewed by David Kilzer.
+
+        * win/tools/scripts/version-stamp.pl: Check environment for
+        RC_PROJECTBUILDVERSION, and use it for the build portion of
+        the file version resource. Otherwise, use the __VERSION_BUILD__
+        value we calculated from the version string.
+
+2014-07-31  Brent Fulgham  <bfulgham@apple.com>
+
         [Win] Fix build failure when using 5-tuple build versions.
         https://bugs.webkit.org/show_bug.cgi?id=135464
         <rdar://problem/17872507>
